--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,8 +20,8 @@ jobs:
       shell: bash
     - name: check test variable value in powershell
       run: |
-        Write-Host "TEST_VAR = $TEST_VAR"
-        if ( $TEST_VAR -ne "initial_value" ) { exit 1 }
+        Write-Host "TEST_VAR = $env:TEST_VAR"
+        if ( $env:TEST_VAR -ne "initial_value" ) { exit 1 }
       shell: powershell
       if: runner.os == 'Windows'
     - name: append value to test variable
