--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,9 +31,15 @@ jobs:
         value: $TEST_VAR;appended_value
     - name: check test variable value after appending value in bash
       run: |
-        echo TEST_VAR = $TEST_VAR      
+        echo TEST_VAR = $TEST_VAR
         [ "$TEST_VAR" == "initial_value;appended_value" ] || exit 1
       shell: bash
+    - name: check test variable value after appending value in powershell
+      run: |
+        Write-Host "TEST_VAR = $env:TEST_VAR"
+        if ( $env:TEST_VAR -ne "initial_value;appended_value" ) { exit 1 }
+      shell: powershell
+      if: runner.os == 'Windows'
     - name: append command output to test variable
       uses: myci-actions/export-env-var@master
       with:
@@ -44,4 +50,9 @@ jobs:
         echo TEST_VAR = $TEST_VAR
         [ "$TEST_VAR" == "initial_value;appended_value;$(arch)" ] || exit 1
       shell: bash
-    
+    - name: check test variable value after appending command output in powershell
+      run: |
+        Write-Host "TEST_VAR = $env:TEST_VAR"
+        if ( $env:TEST_VAR -ne "initial_value;appended_value;$env:PROCESSOR_ARCHITECTURE" ) { exit 1 }
+      shell: powershell
+      if: runner.os == 'Windows'
