--- a/action.yml
+++ b/action.yml
@@ -22,6 +22,7 @@ runs:
         if ( ${{ inputs.shell }} -ne "powershell" ) { exit 0 }
         echo "${{ inputs.name }}=${{ inputs.value }}" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
       shell: powershell
+      if: runner.os == 'Windows'
     - name: export environment variable
       run: |
         [ "${{ inputs.shell }}" == "bash" ] || exit 0
